--- a/index.html
+++ b/index.html
@@ -12,47 +12,42 @@
 <body>
 <header id="header">
     <div class="intro">
-        <h1>Emma DUFLOT</h1>
+        <h1>Emma DUFLOT - IWASAKI</h1>
         <p class="soustitre">Développeuse Web Junior</p>
     </div>
 </header>
 <nav id="navbar">
     <ul class="navlist">
-        <li><a href="#" class="nav-link">A propos</a></li>
-        <li><a href="#" class="nav-link">Compétences</a></li>
-        <li> <a href="#" class="nav-link">Expériences</a></li>
-        <li> <a href="#" class="nav-link">Portfolio</a></li>
-        <li> <a href="#" class="nav-link">Contact</a></li>
+        <li><a href="#ancre1" class="nav-link">A propos</a></li>
+        <li><a href="#ancre2" class="nav-link">Compétences</a></li>
+        <li> <a href="#ancre3" class="nav-link">Portfolio</a></li>
+        <li> <a href="#ancre4" class="nav-link">Contact</a></li>
     </ul>
 </nav>
 <section>
     <div>
-        <h2>Présentation</h2>
-        <p class="me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid animi sunt quo ea quibusdam enim? Blanditiis modi, aut perspiciatis quo a cupiditate esse exercitationem quas fugiat, quasi, qui maiores ad!</p>
+        <h2 id="ancre1">Présentation</h2>
+        <img src="femme-ordinateur.jpeg" alt="femmequicode">
+        <p class="me">
+            Bonjour, je m’appelle Emma Duflot, développeuse Web junior.<br>
+            Anciennement hôtesse de l'air chez China Southern Airlines pendant huit ans, en 2021 j’ai décidé de me reconvertir dans le développement Web. Mon expérience m'a permis d'être organisé, à l’écoute ainsi que de perfectionner mes qualités relationnelles. 
+            Je suis donc actuellement la formation Développeuse Web avec les Descodeuses dans le 20ème arrondissement de Paris. 
+            </p>
     </div>
 </section>
-<div>
-    <h2>Compétences</h2>
-    <p class="">
-        <ul>
-            <li>HTML/CSS</li>
-            <li>HTML/CSS</li>
-            <li>HTML/CSS</li>
-            <li>HTML/CSS</li>
-            <li>HTML/CSS</li>
-        </ul>
+<div id="comp">
+    <h2 id="ancre2">Compétences</h2>
+        <img src="../CVnum/logo/htmlcssjs.png" alt="langagehtmlcssjs">
     </p>
 </div>
 </body>
 <article>
-    <h2>Expériences</h2>
-    <p>blablabla</p>
+    <div class="portfolio">
+        <h2 id="ancre3">Portfolio</h2>
+        <p>blablabla</p>
+    </div>
 </article>
-<div class="portfolio">
-    <h2>Portfolio</h2>
-    <p>blablabla</p>
-</div>
 <footer>
-    <h2>Contact</h2>
+    <h2 id="ancre4">Contact</h2>
 </footer>
 </html>
